# bittensor-rs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  QUICK_REFERENCE.md  README.md  codecov.yml  deny.toml  package.json  proxy.js
.githooks/: pre-push
.github/workflows/: ci.yml
.mission/: missiond.db-shm  missiond.db-wal
.sisyphus/: boulder.json
.sisyphus/evidence/: coverage.json  task-26-ci.txt  task-26-codecov.txt  task-26-deny.txt  task-26-final.txt  task-26-test.txt  task-30-coverage-summary.txt  task-31-pyo3-test.txt  task-31-workspace-test.txt  task1-verification.md
.sisyphus/plans/: bittensor-rs.md
benches/: python_full_benchmark.py
bittensor-axon/: Cargo.toml  README.md
bittensor-axon/src/: axon.rs  config.rs  lib.rs  middleware.rs  router.rs
bittensor-axon/tests/: integration.rs
bittensor-chain/: Cargo.toml  README.md  build.rs
bittensor-chain/src/: client.rs  generated.rs  lib.rs  test_utils.rs
bittensor-chain/src/drand/: beacon.rs  mod.rs  timelock.rs
bittensor-chain/src/events/: filters.rs  mod.rs  monitor.rs  subscriptions.rs
bittensor-chain/src/extrinsics/: children.rs  coldkey_swap.rs  mod.rs  proxy.rs  registration.rs  root.rs  serving.rs  staking.rs  sudo.rs  take.rs  transfer.rs  weights.rs
bittensor-chain/src/mev_shield/: encrypt.rs  mod.rs  submit.rs
bittensor-chain/src/queries/: account.rs  children.rs  commit.rs  delegate.rs  identity.rs  metagraph.rs  mod.rs  network.rs  neuron.rs  proxy.rs  subnet.rs  weights.rs
bittensor-chain/tests/: README.md  integration.rs
bittensor-cli/: Cargo.toml  README.md
bittensor-cli/src/: config.rs  lib.rs  main.rs
bittensor-cli/src/commands/: delegate.rs  metagraph.rs  mev.rs  mod.rs  registration.rs  stake.rs  subnet.rs  transfer.rs  wallet.rs  weights.rs
bittensor-cli/tests/: cli_integration.rs
bittensor-core/: Cargo.toml  README.md
bittensor-core/src/: balance.rs  config.rs  error.rs  lib.rs  pow.rs  prelude.rs  types.rs  weight_utils.rs
bittensor-dendrite/: Cargo.toml  README.md
bittensor-dendrite/src/: config.rs  dendrite.rs  lib.rs  signing.rs
bittensor-dendrite/tests/: integration.rs
bittensor-examples/: Cargo.toml  README.md
bittensor-examples/examples/: axon_server.rs  balance_arithmetic.rs  chain_events.rs  chain_query.rs  dendrite_client.rs  metagraph_sync.rs  python_wallet.py  set_weights.rs  stake.rs  transfer.rs  tui_dashboard.rs  wallet_create.rs
bittensor-examples/examples/wasm_browser/: app.js  index.html
bittensor-metagraph/: Cargo.toml  README.md
bittensor-metagraph/src/: iter.rs  lib.rs  metagraph.rs  serialize.rs  sync.rs
bittensor-pyo3/: Cargo.toml  README.md  pyproject.toml
bittensor-pyo3/src/: axon.rs  chain_client.rs  core_types.rs  dendrite.rs  drand_beacon.rs  lib.rs  metagraph.rs  mev_shield.rs  synapse.rs  wallet.rs
bittensor-pyo3/tests/: test_axon.py  test_chain.py  test_core.py  test_dendrite.py  test_synapse.py  test_wallet.py
bittensor-synapse/: Cargo.toml  README.md
bittensor-synapse/src/: hashing.rs  header.rs  lib.rs  prelude.rs  signing.rs  streaming.rs  synapse.rs  terminal_info.rs
bittensor-tui/: Cargo.toml  README.md
bittensor-tui/src/: app.rs  event.rs  lib.rs  main.rs  network.rs  ui.rs
bittensor-tui/src/panels/: delegate.rs  mod.rs  network_overview.rs  neuron.rs  subnet.rs  wallet.rs
bittensor-wallet/: Cargo.toml  ENCRYPTION.md  README.md
bittensor-wallet/examples/: create_test_coldkey.rs  validate_nacl_compat.rs
bittensor-wallet/scripts/: create_test_coldkey.py  rust_coldkey  rust_coldkey_meta.json  test_coldkey  test_coldkey_meta.json  verify_rust_coldkey.py
bittensor-wallet/src/: keyfile.rs  keypair.rs  lib.rs  mnemonic.rs  ss58.rs  wallet.rs
bittensor-wasm/: Cargo.toml  README.md  wasm-pack.toml
bittensor-wasm/src/: lib.rs  queries.rs  types.rs
coverage/: summary.txt
coverage/html/: index.html
devnet/: README.md  docker-compose.yml  fund_test_accounts.sh  start.sh  stop.sh
docs/: architecture.md  axon.md  chain-client.md  chain.md  cli.md  dendrite.md  faq.md  getting-started.md  glossary.md  index.md  metagraph-lib.md  migration-guide.md  parity_checklist.md  python-bindings.md  queries.md  synapse.md  tui.md  types.md  utils.md  validator.md  wallet.md  wasm-bindings.md
docs/extrinsics/: children.md  coldkey-swap.md  delegate.md  proxy.md  registration.md  root.md  serving.md  staking.md  transfer.md  weights.md
docs/queries/: account.md  children.md  commit.md  delegate.md  delegates.md  identity.md  metagraph.md  network.md  neuron.md  neurons.md  proxy.md  runtime.md  staking.md  subnet.md  subnets.md  wallets.md  weights.md
examples/: README.md  benchmark.rs  chain_info.rs  commitments.rs  delegates.rs  identity.rs  liquidity.rs  metagraph.rs  metagraph_light.rs  neurons.rs  subnets.rs  test_subnet100.rs  voting.rs  wallet_python_compat.rs  wallets.rs
metadata/: finney.scale
scripts/: setup-hooks.sh
src/: config.rs  error.rs  errors.rs  lib.rs  metagraph.rs  subtensor.rs
src/axon/: handlers.rs  info.rs  middleware.rs  mod.rs  server.rs
src/blocks/: epoch_tracker.rs  listener.rs  mod.rs
src/chain/: connection.rs  mod.rs  runtime.rs  signer.rs
src/cli/: mod.rs  utils.rs
src/config/: mod.rs
src/core/: constants.rs
src/crv4/: drand.rs  encryption.rs  mod.rs  payload.rs  persistence.rs
src/dendrite/: client.rs  mod.rs  request.rs  response.rs  streaming.rs
src/logging/: format.rs  mod.rs
src/metagraph/: mod.rs  sync.rs  types.rs
src/queries/: associated_ips.rs  balances.rs  bonds.rs  chain_info.rs  commitments.rs  delegates.rs  hyperparameters.rs  identity.rs  liquidity.rs  metagraph.rs  metagraph_queries.rs  mod.rs  neurons.rs  neurons_bulk.rs  neurons_storage.rs  runtime.rs  stakes.rs  subnets.rs  voting.rs  wallets.rs
src/types/: axon.rs  commitment.rs  delegate.rs  dynamic_info.rs  liquidity.rs  metagraph_info.rs  mod.rs  neuron.rs  (+5 more)
tests/: crv4_flow_tests.rs  integration_tests.rs  metadata_consistency_tests.rs  mock_tests.rs  read_only_tests.rs  unit_tests.rs  value_safety_tests.rs  wallet_compat_tests.rs  weight_comparison_tests.rs
(+188 files in other folders)
