[package]
name = "bittensor-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cortex Foundation"]
description = "A Rust SDK for interacting with the Bittensor network"
repository = "https://github.com/CortexLM/bittensor-rs"
readme = "README.md"
license = "MIT"
keywords = ["bittensor", "blockchain", "substrate", "sdk"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
hex = "0.4.3"
num-traits = "0.2.19"
parity-scale-codec = { version = "3.7.5", features = ["derive"] }
scale-decode = "0.16.0"
scale-encode = "0.10.0"
scale-info = "2.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sp-core = "38.1.0"
sp-runtime = "44.0.0"
subxt = "0.44"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# CRv4 / Timelock encryption dependencies (same as subtensor)
tle = { git = "https://github.com/ideal-lab5/timelock", rev = "5416406cfd32799e31e1795393d4916894de4468", default-features = false, features = ["std"] }
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4.0", features = ["derive"] }
ark-std = "0.4.0"
sha2 = "0.10"
rand_chacha = "0.3"

# Wallet module dependencies
bip39 = "2.0"
argon2 = "0.5"
crypto_secretbox = "0.1"
zeroize = { version = "1.6", features = ["derive"] }
base64 = "0.22"
dirs = "5.0"

# Dendrite HTTP client dependencies
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1.0"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }

# Axon HTTP server dependencies
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "btcli"
path = "src/bin/btcli.rs"

[patch.crates-io]
w3f-bls = { git = "https://github.com/opentensor/bls", branch = "fix-no-std" }
