[workspace]
members = [
    "bittensor-core",
    "bittensor-wallet",
    "bittensor-chain",
    "bittensor-axon",
    "bittensor-dendrite",
    "bittensor-synapse",
    "bittensor-metagraph",
    "bittensor-cli",
    "bittensor-pyo3",
    "bittensor-tui",
    "bittensor-wasm",
    "bittensor-examples",
]
default-members = [
    "bittensor-core",
    "bittensor-wallet",
    "bittensor-chain",
    "bittensor-axon",
    "bittensor-dendrite",
    "bittensor-synapse",
    "bittensor-metagraph",
    "bittensor-cli",
    "bittensor-tui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parity-scale-codec = { version = "3.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
subxt = "0.50"
subxt-signer = "0.50"
