[package]
name = "bittensor-axon"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { workspace = true }
bittensor-core = { path = "../bittensor-core" }
bittensor-synapse = { path = "../bittensor-synapse" }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
http = "1"
tracing = "0.1"
thiserror = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
subxt-signer = { workspace = true }
bittensor-synapse = { path = "../bittensor-synapse" }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
