[package]
name = "bittensor-pyo3"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1" }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = { workspace = true }
bittensor-core = { path = "../bittensor-core" }
bittensor-wallet = { path = "../bittensor-wallet" }
bittensor-chain = { path = "../bittensor-chain" }
bittensor-synapse = { path = "../bittensor-synapse" }
bittensor-axon = { path = "../bittensor-axon" }
bittensor-dendrite = { path = "../bittensor-dendrite" }
bittensor-metagraph = { path = "../bittensor-metagraph" }
subxt = { workspace = true }
subxt-signer = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[features]
python = ["pyo3/extension-module"]
drand = ["bittensor-chain/drand"]
mev-shield = ["bittensor-chain/mev-shield"]
