[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bittensor-rs"
version = "0.1.0"
description = "Python bindings for the bittensor-rs SDK"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bittensor_rs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
