[package]
name = "bittensor-wallet"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sodiumoxide = "0.2"
base64 = "0.22"
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
subxt-signer = { workspace = true }
bittensor-core = { path = "../bittensor-core" }
dirs = "6"
rand = "0.8"
bs58 = "0.5"
blake2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
schnorrkel = "0.11"
bip39 = "2.1"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "validate_nacl_compat"
path = "examples/validate_nacl_compat.rs"

[[example]]
name = "create_test_coldkey"
path = "examples/create_test_coldkey.rs"
