[package]
name = "bittensor-wasm"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console"] }
gloo-net = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
blake2 = "0.10"
bittensor-synapse = { path = "../bittensor-synapse" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
